--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-hard",
   "version": "1.0.0",
   "scripts": {
-    "build": "npm run clean && npm build-client && npm run build_server",
+    "build": "npm run clean && npm run build-client && npm run build-server",
     "build-client": "NODE_ENV=production BABEL_ENV=production node -r babel-register node_modules/.bin/webpack --progress --display-modules --config webpack/webpack.config.client.js",
     "build-server": "NODE_ENV=production BABEL_ENV=production node -r babel-register node_modules/.bin/webpack --progress --config webpack/webpack.config.server.js",
     "clean": "rimraf dist/ && rimraf public/app",
@@ -12,16 +12,23 @@
     "precommit": "npm run lint",
     "prepush": "npm run test",
     "start": "npm run clean & NODE_ENV=development BABEL_ENV=development babel-node src/server",
-    "start-analyzer": "npm run clean & NODE_ENV=development BABEL_ENV=development ANALYZER=true babel-node src/server",
-    "start-production": "npm run build && NODE_ENV=production BABEL_ENV=production babel-node /src/server",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-client": "webpck --watch --config webpack/wepack.config.client.js",
-    "watch-server": "webpck --watch --config webpack/wepack.config.server.js"
-  },
+    "start-analyzer": "npm run clean && NODE_ENV=development BABEL_ENV=development ANALYZER=true babel-node src/server",
+    "start-production": "npm run build && NODE_ENV=production BABEL_ENV=production babel-node src/server",
+    "test": "echo \"Error: no test specified\"",
+    "watch-client": "webpack --watch --config webpack/webpack.config.client.js",
+    "watch-server": "webpack --watch --config webpack/webpack.config.server.js"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Gabreta/react-hard.git"
   },
+  "engines": {
+    "node": "current"
+  },
+  "browserslists": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "author": "Gabriel Vargas",
   "license": "GPL-3.0",
   "dependencies": {
